--- a/templates/scan.html
+++ b/templates/scan.html
@@ -85,7 +85,7 @@
                     <table id="scan-jobs-table">
                         <thead>
                         <tr>
-                            <th>Job ID</th>
+                            <th>Filename</th>
                             <th>Scanner</th>
                             <th>Format</th>
                             <th>Resolution</th>
