--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,8 @@
             <!-- Scan Section -->
             <div class="card scan-card">
                 <div class="card-header">
-                    <i class="fas fa-scanner"></i>
+<!--                    <i class="fas fa-scanner"></i>-->
+                    <i class="fas fa-print"></i>
                     <h2>Scanning</h2>
                 </div>
                 <div class="card-content">
