--- a/templates/print.html
+++ b/templates/print.html
@@ -20,15 +20,16 @@
             <nav class="nav-links">
                 <a href="/" class="nav-link">
                     <i class="fas fa-home"></i>
-                    Dashboard
+                    <span>Dashboard</span>
                 </a>
                 <a href="/print" class="nav-link active">
                     <i class="fas fa-print"></i>
-                    Print
+                    <span>Print</span>
                 </a>
                 <a href="/scan" class="nav-link">
-                    <i class="fas fa-scanner"></i>
-                    Scan
+<!--                    <i class="fas fa-scanner"></i>-->
+                    <i class="fas fa-print"></i>
+                    <span>Scan</span>
                 </a>
             </nav>
         </div>
