--- a/templates/index.html
+++ b/templates/index.html
@@ -107,13 +107,13 @@
                         </p>
                     </div>
                     <div class="card-actions">
-                        <button class="btn btn-primary" onclick="performNozzleCheck()" id="nozzle-check-btn">
-                            <i class="fas fa-check-circle"></i>
-                            Nozzle Check
-                        </button>
-                        <button class="btn btn-secondary" onclick="performNozzleClean()" id="nozzle-clean-btn">
+                        <button class="btn btn-primary" onclick="performNozzleClean()" id="nozzle-clean-btn">
                             <i class="fas fa-spray-can"></i>
                             Clean Nozzles
+                        </button>
+                        <button class="btn btn-secondary" onclick="performNozzleCheck()" id="nozzle-check-btn">
+                            <i class="fas fa-check-circle"></i>
+                            Nozzle Check
                         </button>
                     </div>
                 </div>
@@ -271,7 +271,7 @@
             <div class="modal-actions">
                 <button type="button" class="btn btn-secondary" onclick="closeScanDialog()">Cancel</button>
                 <button type="submit" class="btn btn-primary">
-                    <i class="fas fa-scanner"></i>
+                    <i class="fas fa-print"></i>
                     Start Scan
                 </button>
             </div>
