--- a/static/css/main.css
+++ b/static/css/main.css
@@ -358,7 +358,7 @@ body {
     color: white;
 }
 
-.activity-icon.scan {
+.activity-icon.scanner {
     background-color: var(--success-color);
     color: white;
 }
