Scan filename option support

--- a/templates/index.html
+++ b/templates/index.html
@@ -229,6 +229,11 @@
                     <option value="">Select Scanner</option>
                 </select>
             </div>
+            <div class="form-group">
+                <label for="scan-filename">File Name</label>
+                <input type="text" id="scan-filename" name="filename" placeholder="Optional: e.g., scan_2025">
+                <small class="form-help">Leave empty for automatic naming</small>
+            </div>
             <div class="form-row">
                 <div class="form-group">
                     <label for="scan-resolution">Resolution</label>
