Print media size support

--- a/templates/print.html
+++ b/templates/print.html
@@ -144,6 +144,19 @@
                     <input type="text" id="print-pages" name="pages" placeholder="e.g., 1-5,8">
                     <small class="form-help">Leave empty for all pages</small>
                 </div>
+                <div class="form-group">
+                    <label for="print-mediasize">Media Size</label>
+                    <select id="print-mediasize" name="page_size">
+                        <option value="a4">A4</option>
+                        <option value="a5">A5</option>
+                        <option value="a6">A6</option>
+                        <option value="b5">B5</option>
+                        <option value="b6">B6</option>
+                        <option value="postcard">Postcard</option>
+                        <option value="letter">Letter</option>
+                        <option value="legal">Legal</option>
+                    </select>
+                </div>
             </div>
 
             <div class="form-row">
