--- a/templates/print.html
+++ b/templates/print.html
@@ -27,7 +27,6 @@
                     <span>Print</span>
                 </a>
                 <a href="/scan" class="nav-link">
-<!--                    <i class="fas fa-scanner"></i>-->
                     <i class="fas fa-print"></i>
                     <span>Scan</span>
                 </a>
@@ -144,10 +143,13 @@
                     <input type="text" id="print-pages" name="pages" placeholder="e.g., 1-5,8">
                     <small class="form-help">Leave empty for all pages</small>
                 </div>
+            </div>
+
+            <div class="form-row">
                 <div class="form-group">
-                    <label for="print-mediasize">Media Size</label>
-                    <select id="print-mediasize" name="page_size">
-                        <option value="a4">A4</option>
+                    <label for="print-page-size">Media Size</label>
+                    <select id="print-page-size" name="page_size">
+                        <option value="a4" selected>A4</option>
                         <option value="a5">A5</option>
                         <option value="a6">A6</option>
                         <option value="b5">B5</option>
